--- a/indexx.html
+++ b/indexx.html
@@ -4,17 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="index.css" />
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🦎</text></svg>">
     <script type="text/javascript" src="https://www.cornify.com/js/cornify.js"></script>
-
-    <title>Guess My Number!</title>
+    <title>Can You Guess The Animal?</title>
   </head>
   <body>
     <header>
-      <h1>Guess My Number!</h1>
-      <p class="between">(Between 1 and 20)</p>
-      <button class="btn again">Replay!</button>
-      <div class="number">?</div>
+      <h1>Guess the Animal</h1>
+      <!-- <p class="between">(Between 1 and 20)</p> -->
+      <button class="btn again">Play Again!</button>
+      <div class="animal">?</div>
     </header>
     <main>
       <section class="left">
@@ -23,7 +24,7 @@
       </section>
       <section class="right">
         <p class="message">Start guessing...</p>
-        <p class="label-score">💯 Score: <span class="score">20</span></p>
+        <p class="label-score">💯 Your Score: <span class="score">20</span></p>
         <p class="label-highscore">
           🥇 Highscore: <span class="highscore">0</span>
         </p>
