--- a/indexx.html
+++ b/indexx.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <header>
-      <h1>Guess the Animal</h1>
+      <h1 class="header">Guess the Animal</h1>
       <!-- <p class="between">(Between 1 and 20)</p> -->
       <button class="btn again">Play Again!</button>
       <div class="animal">?</div>
