game logic finished

--- a/indexx.html
+++ b/indexx.html
@@ -15,8 +15,11 @@
       <h1 class="header">Guess the Animal</h1>
       <!-- <p class="between">(Between 1 and 20)</p> -->
       <button class="btn again">Play Again!</button>
-      <div class="animal">?</div>
+      <div class="animal"></div>
     </header>
+    <h2 class="play-again"style="text-align: center; font-size: 20px"></h2>
+
+
     <main>
       <section class="left">
         <input type="text" class="guess" />
