--- a/indexx.html
+++ b/indexx.html
@@ -13,11 +13,10 @@
   <body>
     <header>
       <h1 class="header">Guess the Animal</h1>
-      <!-- <p class="between">(Between 1 and 20)</p> -->
+      <p class="between">(Write the name of each emoji animal)</p> 
       <button class="btn again">Play Again!</button>
       <div class="animal"></div>
     </header>
-    <h2 class="play-again"style="text-align: center; font-size: 20px"></h2>
 
 
     <main>
@@ -28,11 +27,9 @@
       <section class="right">
         <p class="message">Start guessing...</p>
         <p class="label-score">🎯 Your Score: <span class="score">10</span></p>
-        <p class="label-highscore">
-          <!-- 🥇 Highscore: <span class="highscore">0</span> -->
-        </p>
       </section>
     </main>
+    <h2 class="play-again"style="text-align: center; font-size: 20px; color: yellow;  margin-top: -80px;"></h2>
     <script>
       const pressed = []
       const secretCode = 'orelso'
